--- a/src/main/helm/test-azuremonitor/values.yaml
+++ b/src/main/helm/test-azuremonitor/values.yaml
@@ -8,7 +8,7 @@ service:
   type: Gateway
 
 ambassador:
-  enabled: true
+  enabled: false
 
 networkPolicy:
   enabled: true
@@ -29,7 +29,7 @@ hpa:
 resources:
   limits:
     cpu: 500m
-    memory: 512Mi
+    memory: 1024Mi
   requests:
     cpu: 250m
     memory: 256Mi
