--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,23 @@
   </profiles>
 
   <dependencies>
-    <!-- Nuance -->
+    <!-- Azure -->
+    <dependency>
+      <groupId>com.microsoft.azure</groupId>
+      <artifactId>azure</artifactId>
+      <version>1.16.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.azure.resourcemanager</groupId>
+      <artifactId>azure-resourcemanager</artifactId>
+      <version>2.1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-identity</artifactId>
+      <version>1.2.0</version>
+    </dependency>
+
         <!-- Spring -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
