--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
       <artifactId>azure-identity</artifactId>
       <version>1.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.microsoft.azure</groupId>
+      <artifactId>applicationinsights-core</artifactId>
+      <version>2.6.3</version>
+    </dependency>
 
         <!-- Spring -->
     <dependency>
